--- a/2018/05-28-PDESoft-finat-poster.tex
+++ b/2018/05-28-PDESoft-finat-poster.tex
@@ -408,3 +408,7 @@ BoldItalicFont = *-Medium Italic,]{FiraSans}
   \end{posterbox}
 \end{poster}
 \end{document}
+
+% Local Variables:
+% TeX-engine: luatex
+% End:
