--- a/2021/09-09-numdiff.tex
+++ b/2021/09-09-numdiff.tex
@@ -439,6 +439,7 @@ backend=biber]{biblatex}
     \item[$\Rightarrow$] overlapping Schwarz smoother with
       decomposition that decomposes the kernel. ``The right blocks for
       block Jacobi''.
+    \item First application to NS: $P_2$-$P_0$ (2D) \parencite{Benzi:2006}
     \end{itemize}
   \end{itemize}
 \end{frame}
@@ -710,7 +711,16 @@ backend=biber]{biblatex}
     decomposition is obtained
   \end{itemize}
   \begin{block}{Operators}
-    Callback interface to discretisation/PDE library.
+    \begin{columns}
+      \begin{column}{0.65\textwidth}
+        Callback interface to discretisation/PDE library.
+
+        In this case, \url{www.firedrakeproject.org}
+      \end{column}
+      \begin{column}{0.2\textwidth}
+        \includegraphics[width=\textwidth]{firedrake}
+      \end{column}
+    \end{columns}
   \end{block}
 
   {\raggedleft
